--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Copyright (C) 2017 Pozsár Zsolt <pozsar.zsolt@.szerafingomba.hu>
 - Documentation version: 1.1
 - Documentation licence: CC-BY-NC-4.0
 - Documentation language: HU
-- Homepage: <http://www.szerafingomba.hu/equipments.html>
+- Homepage: <http://www.szerafingomba.hu/equipments/>
